--- a/resources/css/filament/user/theme.css
+++ b/resources/css/filament/user/theme.css
@@ -27,11 +27,11 @@
 }
 
 .fi-sidebar-item-label {
-    @apply text-white hover:text-lime-500;
+    @apply text-white;
 }
 
 .fi-sidebar-item-button {
-    @apply bg-sky-900 hover:bg-white hover:text-lime-500 dark:bg-gray-950 focus:text-lime-500;
+    @apply bg-sky-900 hover:bg-sky-800 hover:text-lime-500 dark:bg-gray-950;
 }
 
 .fi-header-heading {
@@ -55,7 +55,7 @@
 }
 
 .fi-btn {
-    @apply bg-lime-500;
+    @apply bg-lime-500 hover:bg-lime-700;
 }
 
 .fi-fieldset {
@@ -66,9 +66,9 @@
     @apply text-lime-500;
 }
 
-.fi-section {
+/* .fi-section {
     @apply ring-lime-500 ring-2;
-}
+} */
 
 .fi-radio-input {
     @apply ring-lime-500 ring-1;
@@ -82,6 +82,29 @@
     @apply ring-0;
 }
 
+.fi-ac-btn-action {
+    @apply hover:bg-lime-700;
+}
+
+.fi-ac-btn-group {
+    @apply hover:bg-lime-700;
+}
+
+.fi-btn-icon {
+    @apply text-white;
+}
+
+.fi-btn-label {
+    @apply text-white;
+}
+
+.fi-section-header-heading {
+    @apply text-white;
+}
+
+.fi-section-header-description {
+    @apply text-white;
+}
 @layer utilities {
     /* Hide scrollbar for Chrome, Safari and Opera */
     .no-scrollbar::-webkit-scrollbar {
