--- a/resources/css/filament/user/theme.css
+++ b/resources/css/filament/user/theme.css
@@ -105,6 +105,10 @@
 .fi-section-header-description {
     @apply text-white;
 }
+
+.fi-sidebar-nav {
+    @apply bg-sky-900;
+}
 @layer utilities {
     /* Hide scrollbar for Chrome, Safari and Opera */
     .no-scrollbar::-webkit-scrollbar {
