--- a/resources/css/filament/admin/theme.css
+++ b/resources/css/filament/admin/theme.css
@@ -93,6 +93,10 @@
 .fi-section-header {
     @apply px-5 py-5 bg-white rounded-lg dark:bg-gray-900;
 }
+
+.fi-checkbox-input {
+    @apply ring-lime-500;
+}
 @layer utilities {
     /* Hide scrollbar for Chrome, Safari and Opera */
     .no-scrollbar::-webkit-scrollbar {
