--- a/resources/css/filament/user/theme.css
+++ b/resources/css/filament/user/theme.css
@@ -113,6 +113,10 @@
 .fi-sidebar-nav {
     @apply bg-sky-900 dark:bg-gray-950;
 }
+
+.fi-checkbox-input {
+    @apply ring-lime-500;
+}
 @layer utilities {
     /* Hide scrollbar for Chrome, Safari and Opera */
     .no-scrollbar::-webkit-scrollbar {
